# sl_core_application

./: .travis.yml  Activity.cpp  Activity.h  ActivityRegistration.h  Application.cpp  Application.h  Block.h  CMakeLists.txt  README.md  appveyor.yml  biicode.conf
impl/: SlCoreApplicationActivator.cpp  SlCoreApplicationActivator.h
test/: CMakeLists.txt  TestConfig.h.in  main.cpp
